--- a/public/assets/less/team.less
+++ b/public/assets/less/team.less
@@ -28,7 +28,6 @@ span.text-content {
   cursor: pointer;
   display: table;
   width: 100%;
-  padding: 8px 5px;
   position: absolute;
   top: 0;
   opacity: 0;
@@ -40,4 +39,5 @@ span.text-content {
 span.text-content span {
   display: table-cell;
   vertical-align: middle;
+  padding: 11px 5px;
 }
